fix of vertical overflow problem in query.html

--- a/Raven.Studio.Html5/Content/app.less
+++ b/Raven.Studio.Html5/Content/app.less
@@ -622,6 +622,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de56acf2', e
     }
 
 #queryContainer {
+
+    .breadcrumb {
+        width:100%;
+        li{
+            overflow: visible!important;             
+        }   
+    }
     .editor {
         height: 60px;
     }
